<resources>
    <string name="app_name">Elektro</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="player_5">Player 5</string>
    <string name="player_6">Player 6</string>

    <string name="restore_previous">Restore Previous Session?</string>
    <string name="restore">Restore</string>
    <string name="no_session">No session</string>
    <string name="start_new">Start New</string>
    <string name="add_player">Add Player</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="choose_color">Choose color</string>
</resources>
